# math

./: CMakeLists.txt  README.md
include/math/: math.h  sort.h
source/: math.cppm  math.ixx  sort.cppm  true_real.ixx
standalone/: CMakeLists.txt
standalone/source/: main.cpp
